--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "oreanroy",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "mongoose": "^5.4.1",
